[package]
name = "mdxt"
version = "0.5.6"
edition = "2021"
authors = ["Baehyunsol <baehyunsol@naver.com>"]
description = "Custom Markdown Engine for my personal blog."
license = "MIT"
keywords = ["markdown", "md", "web", "ssg"]
repository = "https://github.com/baehyunsol/MDxt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
syntect = "5.0.0"
yaml-rust = "0.4.5"